--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,25 @@
-#root {
+
+/* Home page div css under main section in app.jsx file*/
+.home-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 1000px;
+  width: 1526px;
+
+}
+
+/* Home page image  */
+.home-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.3; 
+}
+
+
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +60,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
