removed fixed position of footer

--- a/src/component/footer.css
+++ b/src/component/footer.css
@@ -11,6 +11,6 @@
     width: 100%;
     background-color: #034C53;
     color: #FFF4B7;
-    position: fixed;
+    /* position: fixed; */
     bottom: 0;
 }
