--- a/src/component/navbar.css
+++ b/src/component/navbar.css
@@ -22,7 +22,7 @@ body {
     color: #F38C79;
     height: 50px;
     width: 100%;
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     left: 0; 
 }
