--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,25 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 
 body, html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  width: 100%;
-  height: 100%;;
+  /* width: 100%; */
+  /* height: 100%; */
 }
 
+
+
 .app-container {
-  /* display: flex;
-  flex-direction: column; */
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  /* border: 4px solid green; */
   /* border: 3px solid blue; */
 
   /* min-height: 500vh;    */
@@ -19,15 +28,60 @@ body, html {
 
 
 .main-content-container {
-  margin-top: 70px;
+  /* margin-top: 5px; */
+  /* height: 1000px; */
+  /* background-color: rgb(230, 136, 12); */
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  animation: gradientMotion 5s ease infinite;
+  background-size: 400% 400%;
 
+  display: flex;
+  /* stack vertically */
+  flex-direction: column; 
+  /* spacing between each Services component */
+  gap: 20px; 
+  /* optional, for breathing room */
+  padding: 20px; 
+
+  /* display: flex; */
+  /* allows wrapping to next line */
+  /* flex-wrap: wrap;   */
+  /* space between items */     
+  /* gap: 20px;   */
+  /* or space-around, etc. */           
+  /* justify-content: center;  */
+  
 }
+
+/* For the above main content container */
+@keyframes gradientMotion {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+
+
+
+
 
 
 
 .navbar-container{
   width: 100%;
-  border: 3px solid red;
+  
+  /* border: 3px solid red; */
+}
+
+.footer-container {
+  width: 100%;
+  border: 2px solid rgb(13, 255, 0);
 }
 
 
