--- a/src/component/Services/services.css
+++ b/src/component/Services/services.css
@@ -7,11 +7,13 @@
   /* border: 3px solid #10e13d; */
   margin-top: 0px;
   /* margin-bottom: 30px; */
-  margin-left: 50px;
+  margin-left: 5px;
   /* margin-right: 50px;   */
 
-  height: 200px;
-  width: 90%;
+  /* height: 200px; */
+  height: auto;
+  /* width: 95%; */
+  width: auto;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 2.5);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   background-color: #e09e9e;
@@ -31,6 +33,8 @@
 
 .services-content {
     /* max-width: 500px; */
+    /* display: flex; */
+    /* flex-wrap: wrap; */
     border: 2px solid #10e13d;
     height: 200px;
     width: 100%;
