--- a/src/component/Services/services.css
+++ b/src/component/Services/services.css
@@ -16,7 +16,7 @@
   width: auto;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 2.5);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  background-color: #e09e9e;
+  background-color: #A9BFA8;
   cursor: pointer;
   border-radius: 12px;
 }
@@ -25,7 +25,7 @@
     transform: translateZ(5px);
     box-shadow: 0 4px 16px rgba(208, 236, 27, 0.2);
     transform: scale(1.03);
-    background-color: #8e3f3f;
+    background-color: #5E686D;
 }
 
 
